# cosmic-applet-workspace-windows

./: Cargo.toml  Justfile  README.md  build-flatpak.sh  io.github.tkilian.CosmicAppletWorkspaceWindows.json
data/: io.github.tkilian.CosmicAppletAppTitle.desktop
scripts/: install-local.sh  restart-panel.sh
src/: lib.rs  main.rs  wayland.rs
